@@ -1,15 +1,15 @@
 use strict;
 use warnings;
-use Test::More tests => 21;
+use Test::More tests => 24;
 use Test::Exception;
 use File::Temp qw/tempdir/;
 
 use_ok ('npg_qc::autoqc::autoqc');
 
-{
-  my $dir = tempdir( CLEANUP => 1 );
+my $dir = tempdir( CLEANUP => 1 );
 
-  @ARGV = qw/--qc_in t --id_run 4 --position 1/;
+{
+  local @ARGV = qw/--qc_in t --id_run 4 --position 1/;
   my $factory = npg_qc::autoqc::autoqc->new_with_options(check => 'qX_yield');
   isa_ok($factory, 'npg_qc::autoqc::autoqc');
   is($factory->check, 'qX_yield', 'check attr is set');
@@ -29,7 +29,7 @@ use_ok ('npg_qc::autoqc::autoqc');
   is($check->tag_index, 0, 'tag index');
   is($check->qc_out->[0], $dir, 'dir out is set');
 
-  @ARGV = qw( 
+  local @ARGV = qw( 
     --qc_in       t
     --id_run      4
     --position    1
@@ -52,11 +52,40 @@ use_ok ('npg_qc::autoqc::autoqc');
     't/data/autoqc/090721_IL29_2549/data/2549_1_1.fastqcheck',
     'input files array is set');
 
-  @ARGV = qw(--id_run 4 --position 1 --qc_out);
+  local @ARGV = qw(--id_run 4 --position 1 --qc_out);
   push @ARGV, $dir;
   $factory = npg_qc::autoqc::autoqc->new_with_options(check => 'check');
   lives_ok { $check = $factory->create_check_object() } 'qc_in is optional';
   is($check->qc_out->[0], $dir, 'dir out is set');   
+}
+
+{
+  local @ARGV = qw(--check generic --rpt_list 4:1 --qc_out);
+  push @ARGV, $dir;
+  my $factory = npg_qc::autoqc::autoqc->new_with_options();
+  my $check = $factory->create_check_object();
+  is (ref $check, 'npg_qc::autoqc::checks::generic',
+    'check is an instance of the generic autoqc class');
+
+  local @ARGV = qw(--check generic --spec foo --rpt_list 4:1 --qc_out);
+  push @ARGV, $dir;
+  $factory = npg_qc::autoqc::autoqc->new_with_options();
+  throws_ok { $factory->create_check_object() }
+    qr(npg_qc/autoqc/checks/generic/foo.pm),
+    'error when a specific check class does not exist';
+
+  package npg_qc::autoqc::checks::generic::foo1;
+  use Moose;
+  extends qw(npg_qc::autoqc::checks::generic);
+  
+  package main;
+  
+  local @ARGV = qw(--check generic --spec foo1 --rpt_list 4:1 --qc_out);
+  push @ARGV, $dir;
+  $factory = npg_qc::autoqc::autoqc->new_with_options();
+  $check = $factory->create_check_object();
+  is (ref $check, 'npg_qc::autoqc::checks::generic::foo1',
+    'check is an instance of the foo1 autoqc class');
 }
 
 1;
