@@ -1,5 +1,8 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - ability to invoke, via the qc script, specialised versions of
+   autoqc checks
+
 release 68.6.0
  - autoqc generic result object:
      rename 'desc' attribute to 'pp_name' since 'desc' is a reserved
